--- a/src/Pages/ShopCategory.css
+++ b/src/Pages/ShopCategory.css
@@ -42,6 +42,18 @@
   cursor: pointer;
 }
 
+.category-card button{
+  margin-top: 10px;
+   background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 4px 7px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.2s ease;
+  font-size: 14px;
+}
+
 .category-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
